@@ -1,3 +1,8 @@
+2003-03-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03802] fix autoconf
+	* acinclude.m4 (AC_W3M_CHECK_VER): warn only
+
 2003-03-11  Yuji Abe <cbo46560@pop12.odn.ne.jp>
 
 	* [w3m-dev 03801] fix autoconf
@@ -7369,4 +7374,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.776 2003/03/10 16:04:09 ukai Exp $
+$Id: ChangeLog,v 1.777 2003/03/10 16:07:33 ukai Exp $
